--- a/study_code/a_project/scss/src/main/_main_viewBox.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox.scss
@@ -70,7 +70,7 @@
       width: 70px; height: 25px;
       font-weight: 700;
       text-align: center; line-height: 25px;
-      color: #fff;
+      color: $color_white;
     }
   } // .view_area
 
