--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -7,7 +7,7 @@
 @import './main/main_common';
 
 
-html, body { color: #171717; font-weight: 400;}
+html, body { color: $color_black; font-weight: 400;}
 
 #wrap { width: 100%; height: auto;}
 
