--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -134,7 +134,7 @@
         position: absolute;
         top: 3px; right: 0;
         width:1px; height: 15px;
-        background-color: #999;
+        background-color: $color_dark_gray;
       }
       &>li:last-child::after { display: none;}
 
@@ -148,14 +148,14 @@
         display: none;
         position: absolute; z-index: 10; top: 30px; left: -50px;
         width: 100px; height: auto;
-        background-color: #efefef;
+        background-color: $color_white;
 
         li {
           margin: auto; margin-bottom: 5px;
           font-size: 14px;
           a {
             @include full;
-            &:hover { background-color: #ddd;}
+            &:hover { background-color: $color_gray;}
           }
         }
 
@@ -182,7 +182,7 @@
           width: 160px; height: 30px;
           border-radius: 15px;
           text-indent: 8px;
-          background-color: #ebebeb;
+          background-color: $color_gray;
         }
 
         .unb_search_icon {
