--- a/study_code/a_project/scss/src/main/_main_benefitBox.scss
+++ b/study_code/a_project/scss/src/main/_main_benefitBox.scss
@@ -3,7 +3,7 @@
 #benefitBox {
   width: 100%; height: 500px;
   margin-top: 20px;
-  background-color: #FFF1E0;
+  background-color: $color_primary_light;
 
   @at-root .benefit_title_area {
     width: 280px; height: 100px;
@@ -13,10 +13,10 @@
       width: 280px; height: 60px;
       margin: auto;
       border-radius: 30px;
-      background-color: #E17900;
+      background-color: $color_primary;
       text-align: center; line-height: 60px;
       font-size: 36px; font-weight: 700;
-      color: #fff;
+      color: $color_white;
     }
 
     .benefit_title_detail {
@@ -39,7 +39,7 @@
         min-width: 40px; width: 10vw; max-width: 75px; 
         min-height: 40px; height: 10vw; max-height: 75px;
         margin: auto; margin-bottom: 20px;
-        background-color: #E17900;
+        background-color: $color_primary;
         border-radius: 100%;
       }
       .benefit_img_coupon { @include img($file:'wallet.png', $size: 70% auto)};
