--- a/study_code/a_project/scss/src/main/_main_magazineBox.scss
+++ b/study_code/a_project/scss/src/main/_main_magazineBox.scss
@@ -2,7 +2,7 @@
 
 #magazineBox {
   width: 100%; height: 23.5vw;
-  background-color: #FFF1E0;
+  background-color: $color_primary_light;
   // padding-top: 30px;
 
   .magazine_img {
