--- a/study_code/a_project/scss/src/main/_main_saleBox.scss
+++ b/study_code/a_project/scss/src/main/_main_saleBox.scss
@@ -3,7 +3,7 @@
 #saleBox {
   width: 100%; height: auto;
   margin-top: 20px;
-  padding: 80px;
+  padding: 10vw;
   overflow: hidden;
 
   @at-root .sale_area {
@@ -21,7 +21,7 @@
 
         .sale_img {
           width: 190px; height: 190px;
-          background-color: #eee;
+          background-color: $color_gray;
         }
         .sale_title {
           width: 100%; height: auto;
@@ -40,7 +40,7 @@
             width: 50px; height: auto;
             margin-right: 10px;
             font-size: 18px;
-            color: #fa3826;
+            color: $color_red;
           }
           .sale_price {
             width: 90px; height: auto;
