--- a/study_code/a_project/scss/src/main/_main_viewBox_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox_handhelds.scss
@@ -6,7 +6,7 @@
   #viewBox {
     @at-root .view_area {
       width: 100%; height: 90vw;
-      background-color: #ddd;
+      background-color: $color_gray;
 
       .view_btn {
         left: 0; right: 0;
