--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -157,7 +157,7 @@ html, body {
     height: 5.2vw;
     max-height: 40px;
     cursor: pointer;
-    background-image: url(../../img/global_1.png);
+    background-image: url(../../img/global.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
@@ -341,7 +341,7 @@ html, body {
     width: 30px;
     height: 20px;
     margin-left: 30px;
-    background-image: url(../../img/global_1.png);
+    background-image: url(../../img/global.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
